[package]
name = "actix-x-ws"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4" }
actix-ws = { version = "0.3.0" }
actix-http = "3"
actix = "0.13"
actix-rt = "2"
actix-multipart = "0.6"
actix-multipart-derive = "0.6"

chrono = { version = "0.4", features = ["serde"]}

futures = "0.3"
env_logger = "0.8"
log = "0.4"
derive_more= { version = "1", features = ["full"] }
tokio = "1.40.0"
tokio-stream = "0.1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_urlencoded = "0.7"

http = "0.2.12"
futures-util = "0.3.31"
# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
# pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] }
diesel = { version = "2", features = ["sqlite", "uuid", "postgres", "r2d2", "chrono"] }
dotenvy = "0.15"
r2d2 = "0.8"

# bytes
bytes = "1"
byteorder = "1.4"
bcrypt = "0.15"

base64 = "0.21.5"
aes = "0.8"
block-modes = "0.8"
cbc = "0.1.2"

async-trait = "0.1"
anyhow = "1"
#mime = "0.3"
lazy_static = "1.4"
inner-mem-cache = "0.1.7"
ratelimiter-rs = "0.1.5"
clap = { version = "4.5", features = ["derive"] }



# db
rusqlite = { version = "0.25", features = ["bundled"] }
rsql_builder = "0.1.5"
# sled db
sled = "0.34"

# cache
redis = { version = "0.28", features = ["tokio-comp", "r2d2", "cluster"] }

# protobuf serde
prost = "0.7"
prost-derive = "0.7"
prost-types = "0.7"


sqlx = { version = "0.6", features = ["runtime-tokio-rustls","mysql"] }